<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.reactome.server.tools</groupId>
    <artifactId>diagram-exporter</artifactId>
    <version>1.2.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>Diagram Exporter</name>

    <description>Export Pathway diagram into PowerPoint or PNG</description>
    <url>http://reactome.org</url>
    <organization>
        <name>The European Bioinformatics Institute</name>
        <url>http://www.ebi.ac.uk/</url>
    </organization>

    <developers>
        <developer>
            <id>gviteri</id>
            <name>Guilherme Viteri</name>
            <email>gviteri@ebi.ac.uk</email>
            <organization>http://www.ebi.ac.uk/</organization>
        </developer>
        <developer>
            <id>plorente</id>
            <name>Pascual Lorente</name>
            <email>plorente@ebi.ac.uk</email>
            <organization>http://www.ebi.ac.uk/</organization>
        </developer>
        <developer>
            <id>amundo</id>
            <name>Antonio Fabregat Mundo</name>
            <email>amundo@ebi.ac.uk</email>
            <organization>http://www.ebi.ac.uk/</organization>
        </developer>
    </developers>

    <properties>
        <diagram.reader.version>1.1.0</diagram.reader.version>
        <batik.transcoder>1.9.1</batik.transcoder>
        <aspose.version>17.7</aspose.version>
        <logback.version>1.1.10</logback.version>
        <commons.io.version>2.5</commons.io.version>
        <jasp.version>2.1</jasp.version>
        <junit.version>4.12</junit.version>

        <!--build-->
        <jdk.version>1.8</jdk.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <dependency.locations.enabled>false</dependency.locations.enabled>

        <!--maven build and plugins-->
        <maven.compiler.version>3.5.1</maven.compiler.version>
        <maven.jar.version>2.6</maven.jar.version>
        <maven.source.version>2.4</maven.source.version>
    </properties>

    <dependencies>

        <!-- Diagram Reader -->
        <dependency>
            <groupId>org.reactome.server.tools</groupId>
            <artifactId>diagram-reader</artifactId>
            <version>${diagram.reader.version}</version>
        </dependency>

        <!-- EHLD related dependencies -->
        <dependency>
            <groupId>org.apache.xmlgraphics</groupId>
            <artifactId>batik-transcoder</artifactId>
            <version>${batik.transcoder}</version>
        </dependency>

        <dependency>
            <groupId>com.aspose</groupId>
            <artifactId>aspose-slides</artifactId>
            <version>${aspose.version}</version>
            <classifier>jdk16</classifier>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <!--Logback classic-->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons.io.version}</version>
        </dependency>

        <!--JSAP console reader-->
        <dependency>
            <groupId>com.martiansoftware</groupId>
            <artifactId>jsap</artifactId>
            <version>${jasp.version}</version>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.name}</finalName>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering>
            </testResource>
        </testResources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven.jar.version}</version>
                <configuration>
                    <excludes>
                        <exclude>**/logback.xml</exclude>
                        <exclude>**/license/</exclude>
                    </excludes>
                </configuration>
            </plugin>

            <!-- Generate jar with dependencies -->
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>org.reactome.server.tools.diagram.exporter.DiagramExporter</mainClass>
                        </manifest>
                    </archive>
                    <finalName>diagram-exporter</finalName>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <!--Configures the distribution to nexus repository -->
    <distributionManagement>
        <!-- EBI repo -->
        <repository>
            <id>pst-release</id>
            <name>EBI Nexus Repository</name>
            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-release</url>
        </repository>
        <!-- EBI SNAPSHOT repo -->
        <snapshotRepository>
            <uniqueVersion>false</uniqueVersion>
            <id>pst-snapshots</id>
            <name>EBI Nexus Snapshots Repository</name>
            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <!-- Repositories -->
    <repositories>

        <repository>
            <id>nexus-ebi-repo-release</id>
            <name>The EBI internal repository</name>
            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-repo/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>nexus-ebi-repo-snapshot</id>
            <name>The EBI internal repository</name>
            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-repo/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>

        <repository>
            <id>aspose-maven-repository</id>
            <url>http://maven.aspose.com/repository/ext-release-local</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>

        <repository>
            <id>mygrid-maven-repository</id>
            <url>http://www.mygrid.org.uk/maven/repository/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

</project>
